tests/baselines/reference/FunctionDeclaration7_es6.errors.txt
tests/cases/conformance/es6/functionDeclarations/FunctionDeclaration7_es6.ts(3,20): error TS2304: Cannot find name 'yield'.


==== tests/cases/conformance/es6/functionDeclarations/FunctionDeclaration7_es6.ts (1 errors) ====
    function*bar() {
      // 'yield' here is an identifier, and not a yield expression.
      function*foo(a = yield) {
                       ~~~~~
!!! error TS2304: Cannot find name 'yield'.
      }
    }